2008-07-23  Curtis Gedak  <gedakc@gmail.com>

	* gparted.desktop.in.in,
	  Makefile.am,
	  configure.in: Added check for gksu for gparted menu invocation.
	  - Permits GNU/Linux distributions with gksu to prompt for root
	    password when invoked from the menu, while not hampering
	    distributions without gksu.
	  - Partially addresses bug 318557 for some GNU/Linux distributions

	* configure.in: Append -svn to version for continuing development

2008-07-10  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.3.8
	  ===================================================

2008-06-18  Curtis Gedak  <gedakc@gmail.com>

	* src/OperationResizeMove.cc: Fixed incorrectly recognized move/resizes
	  - Re-wrote logic to determine proper partition move / resize operation
	  - Closes GParted bug #438570

2008-06-15  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Enhanced snap-to-cylinder math
	  - Improved math for rounding starting sector to cylinder
	    boundaries for logical partitions, and the first primary
	    partition for MBR and GPT partition tables.
	  - Closes GParted bugs #432525, and #525137

	* include/Dialog_Base_Partition.h,
	  src/Dialog_Base_Partition.cc,
	  include/Dialog_Partition_New.h,
	  src/Dialog_Partition_New.cc: Migrated checkbutton.
	  - Moved "Round to cylinders" checkbutton from partition new
	    dialog to partition base dialog so that it may be used
	    by all inheritors (e.g., New, Copy, and Resize/Move).

2008-06-12  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Changed 3 grammatical errors to dashes.
	  - Closes GParted bug #533637

2008-06-10  Curtis Gedak  <gedakc@gmail.com>

	* src/main.cc: Changed wording of root privilege required warning.
	  - Closes GParted bug #534072

	* src/Dialog_Progress.cc: Added proper PO file plural handling.
	  - fixed a few spelling errors.

	* src/Win_GParted.cc: Added proper PO file plural handling.
	  - Closes GParted bug #315291
