@@ -1,3 +1,9 @@
+2008-07-25  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/hfsplus.cc: Enhanced support for hfsplus file system
+	  - Added create, get_label, and check_repair functionality
+	  - Additional feature support is provided by the hfsprogs package
+
 2008-07-23  Curtis Gedak  <gedakc@gmail.com>
 
 	* gparted.desktop.in.in,
